--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -25617,6 +25617,77 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestGarithosMindControl.RewardDescription
   nameWithType: QuestGarithosMindControl.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen
+  name: QuestHearthglen
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html
+  commentId: T:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen
+  nameWithType: QuestHearthglen
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.#ctor(Rectangle)
+  name: QuestHearthglen(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.QuestHearthglen(Rectangle)
+  nameWithType: QuestHearthglen.QuestHearthglen(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.#ctor*
+  name: QuestHearthglen
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.QuestHearthglen
+  nameWithType: QuestHearthglen.QuestHearthglen
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.CompletionPopup
+  nameWithType: QuestHearthglen.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.CompletionPopup
+  nameWithType: QuestHearthglen.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestHearthglen.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnComplete
+  nameWithType: QuestHearthglen.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestHearthglen.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.OnFail
+  nameWithType: QuestHearthglen.OnFail
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.RewardDescription
+  nameWithType: QuestHearthglen.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestHearthglen_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestHearthglen.RewardDescription
+  nameWithType: QuestHearthglen.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestKingArthas
   name: QuestKingArthas
   href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestKingArthas.html
@@ -26075,6 +26146,77 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestThunderEagle.RewardDescription
   nameWithType: QuestThunderEagle.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand
+  name: QuestTyrHand
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html
+  commentId: T:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand
+  nameWithType: QuestTyrHand
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.#ctor(Rectangle)
+  name: QuestTyrHand(Rectangle)
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand__ctor_Rectangle_
+  commentId: M:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.#ctor(Rectangle)
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.QuestTyrHand(Rectangle)
+  nameWithType: QuestTyrHand.QuestTyrHand(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.#ctor*
+  name: QuestTyrHand
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.QuestTyrHand
+  nameWithType: QuestTyrHand.QuestTyrHand
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.CompletionPopup
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_CompletionPopup
+  commentId: P:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.CompletionPopup
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.CompletionPopup
+  nameWithType: QuestTyrHand.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.CompletionPopup*
+  name: CompletionPopup
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_CompletionPopup_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.CompletionPopup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.CompletionPopup
+  nameWithType: QuestTyrHand.CompletionPopup
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnComplete(MacroTools.FactionSystem.Faction)
+  name: OnComplete(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_OnComplete_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnComplete(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnComplete(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestTyrHand.OnComplete(Faction)
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnComplete*
+  name: OnComplete
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_OnComplete_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnComplete
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnComplete
+  nameWithType: QuestTyrHand.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestTyrHand.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.OnFail
+  nameWithType: QuestTyrHand.OnFail
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.RewardDescription
+  nameWithType: QuestTyrHand.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.html#WarcraftLegacies_Source_Quests_Lordaeron_QuestTyrHand_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Lordaeron.QuestTyrHand.RewardDescription
+  nameWithType: QuestTyrHand.RewardDescription
 - uid: WarcraftLegacies.Source.Quests.Naga
   name: WarcraftLegacies.Source.Quests.Naga
   href: api-source/WarcraftLegacies.Source.Quests.Naga.html
